--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backbone": "^1.3.3",
     "bootstrap": "^3.3.7",
     "handlebars": "^4.0.11",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "underscore": "^1.8.3"
   }
 }
